--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ tests/test_models/__pycache__/test_base_model.cpython-310.pyc
 
 .gitignore
 test_base_model_dict.py
+file.json
+test_save_reload_base_model.py
+models/engine/__pycache__/__init__.cpython-310.pyc
+models/engine/__pycache__/file_storage.cpython-310.pyc
