--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ tests/__pycache__/test_file_storage.cpython-310.pyc
 tests/test_models/__pycache__/test_task3.cpython-310.pyc
 tests/test_models/test_task3.py
 tests/test_models/__pycache__/test_task4.cpython-310.pyc
+tests/__pycache__/test_file_storage.cpython-310.pyc
+tests/test_models/__pycache__/test_file_storage.cpython-310.pyc
+test_base_model_dict.py
