--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 models/__pycache__/__init__.cpython-310.pyc
 models/__pycache__/base_model.cpython-310.pyc
-test_base_model.py
 __pycache__/datetime.cpython-310.pyc
 tests/test_models/__pycache__/__init__.cpython-310.pyc
 tests/test_models/__pycache__/test_base_model.cpython-310.pyc
 
 .gitignore
-test_base_model_dict.py
-
 file.json
 test_save_reload_base_model.py
 models/engine/__pycache__/__init__.cpython-310.pyc
 models/engine/__pycache__/file_storage.cpython-310.pyc
 
+tests/test_models/__pycache__/test_task3.cpython-310.pyc
+tests/test_models/test_task3.py
+tests/test_models/__pycache__/test_task4.cpython-310.pyc
