--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ tests/__pycache__/test_file_storage.cpython-310.pyc
 test_base_model_dict.py
 tests/test_models/__pycache__/test_file_storage.cpython-310.pyc
 
+tests/test_models/test_engine/__pycache__/test_file_storage.cpython-310.pyc
+models/__pycache__/user.cpython-310.pyc
+models/__pycache__/state.cpython-310.pyc
+models/__pycache__/review.cpython-310.pyc
+models/__pycache__/place.cpython-310.pyc
+models/__pycache__/city.cpython-310.pyc
+models/__pycache__/amenity.cpython-310.pyc
