--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ models/__pycache__/review.cpython-310.pyc
 models/__pycache__/place.cpython-310.pyc
 models/__pycache__/city.cpython-310.pyc
 models/__pycache__/amenity.cpython-310.pyc
+tests/__pycache__/__init__.cpython-310.pyc
+tests/test_models/__pycache__/test_amenity.cpython-310.pyc
+tests/test_models/__pycache__/test_city.cpython-310.pyc
+tests/test_models/__pycache__/test_place.cpython-310.pyc
+tests/test_models/__pycache__/test_review.cpython-310.pyc
+tests/test_models/__pycache__/test_state.cpython-310.pyc
+tests/test_models/__pycache__/test_user.cpython-310.pyc
